# qlik-mcp-server

./: .env.example  .env.test.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  future_planning.md  pyproject.toml  pytest.ini  requirements.txt  start_server.py  test_both_tools.py  test_data_sources.py  test_dimensions.py  test_list_apps.py
.github/workflows/: test.yml
docs/: API_REFERENCE.md  CERTIFICATES.md  SCRIPT_TOOL_USAGE.md  TROUBLESHOOTING.md
examples/: README.md  claude_desktop_config.json  vscode_config.json
src/: __init__.py  qlik_client.py  server.py  tools.py
tests/: README.md  conftest.py  test_binary_extraction.py  test_both_tools.py  test_data_sources.py  test_dimensions.py  test_fields.py  test_list_apps.py  test_mcp_tool.py  test_qlik_connection.py  test_script.py  test_sheets.py  test_sheets_dashboard.py  test_variables.py  test_vizlib_container.py
